# edu_meet_bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 0d00328b9e03_.py  10e7356d0cc9_.py  2bb38ee2987c_.py  3b952734569c_.py  3d65d4079b9c_.py  4a214d57a840_.py  5e54cbbd1ab4_.py  6281e5a36492_.py  7fc4e09a118f_.py  8f6b087b3d36_init_migration.py  aaebad612e58_.py  ac9c3f7ee59f_.py  af636e942cdb_fix_slot_model.py  b66910d86c4b_.py  c5d477f6c61b_init_migration.py  c708d83856c4_.py  dea0023a4444_.py  f151dfd63efa_.py  f326ad1de327_.py
edu_meet_bot/: db.py  errors.py  main.py  models_registry.py  settings.py  utils.py
edu_meet_bot/admin/: errors.py  middleware.py  models.py  repo.py  service.py
edu_meet_bot/debug/: utils.py
edu_meet_bot/general_menu/: enum_fields.py  keyboard.py  middleware.py  models.py  routes.py  service.py
edu_meet_bot/registration/: keyboard.py  routes.py  utils.py  views.py
edu_meet_bot/scripts/: add_admin.py  run_bot.py
edu_meet_bot/session/: enum_fields.py  middleware.py  models.py  repo.py  router.py  routes.py  service.py  views.py
edu_meet_bot/sessions/: keyboard.py  routes.py  utils.py
edu_meet_bot/support/: errors.py  fsm.py  routes.py  utils.py  views.py
versions/: 0ed8d5ec4da0_.py  12c6d825e336_.py  8a9ebee90f94_.py  97c00ab94e72_.py  bf75a2c3f5c4_.py  cc2473c0dd15_apply_constraints.py
