[tool.poetry]
name = "edu-meet-bot"
version = "0.1.0"
description = ""
authors = ["Asgef <asgefes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
aiogram = "^3.13.1"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
# ORM
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
databases = "^0.9.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
start = "edu_meet_bot.scripts.run_bot:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
